Use dark theme on default

--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -11,7 +11,7 @@
     <string name="splash_screen_title">Gigabyte Developers Incorporated</string>
 
     <!-- Use dark theme as default theme -->
-    <bool name="use_dark_theme">false</bool>
+    <bool name="use_dark_theme">true</bool>
 
     <!-- CONFIG: MUZEI -->
 
